# rosbag_record_cpp

./: CMakeLists.txt  README.md  package.xml
include/rosbag_record_cpp/: recorder.h  rosbag_record.h
src/: recorder.cpp  rosbag_record.cpp  rosbag_record_test.cpp
