<?xml version="1.0"?>
<package>
  <name>rosbag_record_cpp</name>
  <version>0.0.1</version>
  <description>The rosbag_record_cpp package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/rosbag_record_cpp</url>
  <url type="butracker">https://github.com/davetcoleman/rosbag_record_cpp/issues</url>
  <url type="repository">https://github.com/davetcoleman/rosbag_record_cpp/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>

  <export>
  </export>
</package>